[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
pixels = "0.9.0"
winit = "0.27.3"
winit_input_helper = "0.13"

[profile.release-plus]
inherits = "release"
opt-level = 3
strip = true
lto = true
codegen-units = 1
